--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 	<script src="https://d3js.org/d3.v3.min.js"></script>
 	<style>
 		.node{
-			stroke: #fff;
+			stroke: #000;
 			stroke-width: 1px;
 		}
 
@@ -13,44 +13,150 @@
 			stroke: #999;
 			stroke-opacity: 0.6;
 		}
+
+		.button-control{
+			font-size: 16px;
+			border-radius: 5px;
+			color: black;
+			padding: 15px 12px;
+			text-align: center;
+			text-decoration: none;
+			background-color: white;
+			display: inline-block;
+			-webkit-transition-duration: 0.4s;
+			transition-duration: 0.4s;
+		}
+
+		.button-control:hover{
+			color: white;
+		}
+
+		.button-green{
+			border: 2px solid #4CAF50;
+		}
+
+		.button-green:hover{
+			background-color: #4CAF50;
+		}
+
+		.button-orange{
+			border: 2px solid orange;
+		}
+
+		.button-orange:hover{
+			background-color: orange;
+		}
+
 	</style>
 </head>
 <body>
-
+	<div id="control-panel">
+		<select id="graph-picker" onChange="chooseGraph()">
+			<option value="main">Main</option>
+			<option value="classroom">Classroom</option>
+			<option value="party">Party</option>
+			<option value="highschool">Highschool</option>
+		</select>
+		<button id="total-infection" onclick="totalInfection()" class="button-control button-green">Total Infection</button>
+		<button id="limited-infection" onclick="limitedInfection()" class="button-control button-orange">Limited Infection</button>
+		<input id="infection-amount" type="text">
+		<p id="label">Name: </p>
+		<p id="prompt">Message:</p>
+	</div>
 	<script>
 		
-		
-		console.log("Performing setup");
+		var force, svg;
+		var current_graph_name;
 
-		var width = 960,
-			height = 500;
+		var colorScale = d3.scale.category10();
 
-		var force = d3.layout.force()
-			.charge(-120)
-			.linkDistance(30)
-			.size([width, height]);
+		var totalInfectionState = false;
+		var limitedInfectionState = false;
 
-		var svg = d3.select("body")
-			.append("svg")
-			.attr("width", width)
-			.attr("height", height);
+		function totalInfection(){
+			// Reset the state of the visualization
+			d3.select("svg")
+				.selectAll(".node")
+				.style("fill", function(d){ return colorScale(d.group); });
 
-		var xhttp;
-		if(window.XMLHttpRequest){
-			xhttp = new XMLHttpRequest();
+			limitedInfectionState = false;
+			totalInfectionState = true;
+
+			d3.select("#prompt")
+				.text("Message: Please click a node.");
 		}
 
-		// The function called when the response for the graph is received
-		xhttp.onreadystatechange = function(){
-			if(xhttp.readyState == 4 && xhttp.status == 200){
+		function limitedInfection(){
+			d3.select("svg")
+				.selectAll(".node")
+				.style("fill", function(d){ return colorScale(d.group); });
 
-				graph = JSON.parse(xhttp.responseText);
-				processGraph(graph);
+			limitedInfectionState = true;
+			totalInfectionState = false;
+
+			d3.select("#prompt")
+				.text("Message: ");
+
+			var text = document.getElementById("infection-amount").value;
+			if(text){
+				if(parseInt(text)){
+					request_limited_infection(current_graph_name, parseInt(text));
+				}
 			}
 		}
 
-		xhttp.open("GET", "graph/main", true);
-		xhttp.send();
+		function chooseGraph(){
+			var e = document.getElementById("graph-picker");
+			var value = e.options[e.selectedIndex].value;
+
+			setup(value);
+		}
+
+
+		function setup(graph_name){
+			console.log("Performing setup");
+
+			current_graph_name = graph_name;
+
+			if(d3.select("svg")){
+				d3.select("svg").remove();
+			}
+
+			var width = 960,
+				height = 500;
+
+			force = d3.layout.force()
+				.charge(-120)
+				.linkDistance(30)
+				.size([width, height]);
+
+			svg = d3.select("body")
+				.append("svg")
+				.attr("width", width)
+				.attr("height", height);
+
+			requestGraph(graph_name);
+		}
+
+		function requestGraph(graph_name){
+			var xhttp;
+			if(window.XMLHttpRequest){
+				xhttp = new XMLHttpRequest();
+			}
+
+			// The function called when the response for the graph is received
+			xhttp.onreadystatechange = function(){
+				if(xhttp.readyState == 4 && xhttp.status == 200){
+
+					graph = JSON.parse(xhttp.responseText);
+					processGraph(graph);
+				}
+			}
+
+			xhttp.open("GET", "graph/" + graph_name, true);
+			xhttp.send();
+		}
+		
 
 		function processGraph(graph){
 			console.log("Processing graph.");
@@ -74,9 +180,29 @@
 				.enter()
 				.append("circle")
 				.attr("class", "node")
-				.attr("r", 5)
-				.style("fill", "green")
+				.attr("r", 7)
+				.attr("id", function(d){ return d.name; })
+				.style("fill", function(d){ return colorScale(d.group); })
 				.call(force.drag);
+
+			node.on("click", function(){
+				if(totalInfectionState){
+					totalInfectionState = false;
+					d3.select("#prompt").text("Message: ");
+					request_total_infection(current_graph_name, this.id);
+				}
+			});
+
+			node.on("mouseover", function(d){
+				d3.select("#label")
+					.text("Name: " + d.name);
+			});
+
+			node.on("mouseout", function(){
+				d3.select("#label")
+					.text("Name: ");
+			});
+
 
 			force.on("tick", function(){
 				link.attr("x1", function(d){ return d.source.x; })
@@ -89,7 +215,62 @@
 			});
 		}
 
+		function request_total_infection(graph_name, user){
+			var xhttp;
+			if(window.XMLHttpRequest){
+				xhttp = new XMLHttpRequest();
+			}
 
+			xhttp.onreadystatechange = function(){
+				if(xhttp.readyState == 4 && xhttp.status == 200){
+					simulation = JSON.parse(xhttp.responseText);
+					simulate_infection(simulation);
+				}
+			}
+
+			xhttp.open("GET", "total_infection/" + graph_name + "/" + user, true);
+			xhttp.send();
+		}
+
+		function simulate_infection(simulation){
+			var i = 0;
+			simulation.steps.forEach(function(el){
+				el.forEach(function(user){
+					d3.select("#" + user)
+						.transition()
+						.duration(500)
+						.delay(function(d){ 
+							return i * 1500; 
+						})
+						.style("fill", "white");
+				});
+				i += 1;
+			});
+		}
+
+		function request_limited_infection(graph_name, amount){
+			var xhttp;
+			if(window.XMLHttpRequest){
+				xhttp = new XMLHttpRequest();
+			}
+
+			xhttp.onreadystatechange = function(){
+				if(xhttp.readyState == 4 && xhttp.status == 200){
+					simulation = JSON.parse(xhttp.responseText);
+					if(simulation.steps.length == 0){
+						d3.select("#prompt")
+							.text("Message: Unable to infect specified amount.");
+					}else{
+						simulate_infection(simulation);
+					}
+				}
+			}
+
+			xhttp.open("GET", "limited_infection/" + graph_name + "/" + amount, true);
+			xhttp.send();
+		}
+
+		window.onload = setup("main");
 
 	</script>
 </body>
