Add ring visualization to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,7 @@
 			<option value="classroom">Classroom</option>
 			<option value="party">Party</option>
 			<option value="highschool">Highschool</option>
+			<option value="ring">Ring</option>
 		</select>
 		<button id="total-infection" onclick="totalInfection()" class="button-control button-green">Total Infection</button>
 		<button id="limited-infection" onclick="limitedInfection()" class="button-control button-orange">Limited Infection</button>
